--- a/src/app/service-select/service-select.component.css
+++ b/src/app/service-select/service-select.component.css
@@ -9,7 +9,7 @@
   }
   
   .mat-raised-button.mat-green{
-    background-color: purple;
+    background-color: #673ab7;
     color: white;
     width: 100px;
     height: 40px;
